# lvgl-hello-world

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.c  main.cpp
rendering-engine/: rendering_engine.c  rendering_engine.h  rendering_engine_framebuffer.c  rendering_engine_sdl.c  rendering_engine_wayland.c
